--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -8,8 +8,7 @@
     <link
       rel="preload stylesheet"
       as="style"
-      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
-    />
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
   </head>
   <body>
     <div id="root"></div>
