--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -8,6 +8,10 @@
     <link
       rel="preload stylesheet"
       as="style"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link
+      rel="preload stylesheet"
+      as="style"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
   </head>
   <body>
