--- a/apps/client/index.html
+++ b/apps/client/index.html
@@ -13,6 +13,15 @@
       rel="preload stylesheet"
       as="style"
       href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
+      <style>
+        body {
+          background: radial-gradient(
+            circle at top,
+            hsl(221deg, 14%, 15%) 0%,
+            hsl(221deg, 14%, 5%) 100%
+          );
+        }
+      </style>
   </head>
   <body>
     <div id="root"></div>
